apps/sample-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deploy
spec:
  selector:
    matchLabels:
      app: sample-deploy
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-deploy
    spec:
      containers:
      - name: sample-deploy
        image: afteixeira/flask-sqrt:v2
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 150m
          requests:
            cpu: 50m
        livenessProbe:
          httpGet:
            path: /
            port: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: sample-deploy
  labels:
    app: sample-deploy
spec:
  ports:
  - port: 5000
  selector:
    app: sample-deploy
