apps/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  tls:
    - hosts:
        - 192.168.1.35.nip.io
      secretName: ingress-tls
  rules:
  - host: 192.168.1.35.nip.io
    http:
      paths:
      - path: /
        backend:
          service:
            name: sample-deploy
            port:
              number: 5000
        pathType: ImplementationSpecific
